payment_controller added
